--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>学園祭の思い出</h1>
 
-    <p>こんにちわ！<br>
+    <p>こんにちは！<br>
     10月後半に学園祭がありましたね！<br>
     みなさんは楽しめたでしょうか？<br>
     私はめっちゃ楽しかったです！<br><br>
